Bug 435228 nsMsgMailSesssion::AddFolderListener allows duplicate listeners. p=asuth,r=bienvenu,sr=Neil